--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ ul {
   /* outline: 2px solid blue; */
 }
 /* HEADER */
+
 .header-border {
   border-bottom: 1px solid #ececec;
 }
@@ -149,6 +150,11 @@ ul {
   display: flex;
   align-items: center;
 }
+/* ----------------------------------- */
+
+/* .underline {
+  position: relative;
+} */
 
 .link {
   display: block;
@@ -162,7 +168,24 @@ ul {
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.02em;
+
+  outline: 1px solid teal;
 }
+
+.underline:hover::after {
+  content: "";
+
+  /* position: absolute; */
+
+  display: block;
+
+  height: 4px;
+  width: 100%;
+  background-color: #2196f3;
+  border-radius: 2px;
+}
+
+/* ------------------------------------- */
 
 .contacts .link {
   color: var(--primary-text-color);
@@ -177,7 +200,7 @@ ul {
   fill: var(--accent-color);
 }
 
-/* MAIN */
+/* Уникальный контент страницы - MAIN */
 
 /* ГЕРОЙ */
 /* Кнопка Герой */
@@ -261,21 +284,15 @@ ul {
 
 .icon-antenna {
   justify-content: center;
-  margin-top: 25px;
-  margin-bottom: 25px;
 }
 .icon-clock {
   justify-content: center;
 }
 .icon-diagram {
   justify-content: center;
-  margin-top: 25px;
-  margin-bottom: 25px;
 }
 .icon-astronaut {
   justify-content: center;
-  margin-top: 25px;
-  margin-bottom: 25px;
 }
 
 .features:not(:last-child) {
@@ -325,12 +342,36 @@ ul {
 }
 
 .section-img {
+  position: relative;
+
   margin-left: 30px;
   max-width: calc((100%-60px) / 3);
 }
 
 .section-img:nth-last-child(3n) {
   margin-left: 0;
+}
+
+.examples-img {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.img-descript {
+  margin: 0;
+  padding: 27px 82px 27px 82px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--white-color);
 }
 
 /* Команда */
@@ -414,7 +455,8 @@ ul {
   fill: var(--icon-color);
 }
 
-.team-network-icons:hover {
+.team-network-icons:hover,
+.team-network-icons:focus {
   background-color: var(--accent-color);
   fill: var(--white-color);
   border-radius: 50%;
@@ -424,7 +466,7 @@ ul {
   margin-right: 10px;
 }
 .team-list:nth-child(4n) {
-  padding-right: 0;
+  margin-right: 0;
 }
 
 /* Постоянные клиенты */
@@ -452,7 +494,8 @@ ul {
   border: 1px solid #afb1b8;
 }
 
-.customers-link:hover {
+.customers-link:hover,
+.customers-link:focus {
   border-color: var(--accent-color);
 }
 .customers-link:hover .customers-icon {
@@ -623,6 +666,7 @@ ul {
 }
 
 .service-main {
+  /* bottom: 0; */
   margin-bottom: 30px;
   margin-right: 30px;
   /* max-width: 370px; */
@@ -630,6 +674,7 @@ ul {
 }
 
 .text-decoration {
+  position: relative;
   display: block;
   padding: 0;
   text-decoration: none;
@@ -639,6 +684,47 @@ ul {
 .text-decoration:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+/* ----------- */
+/* position: relative;
+   */
+/* ------------ */
+
+/* .text-decoration:hover .service-text-description {
+  transform: translateY(0);
+} */
+
+.service-text {
+  position: absolute;
+
+  width: 100%;
+  height: 294px;
+
+  background-color: rgba(33, 150, 243, 0.9);
+}
+
+.service-text:hover,
+.service-text:focus {
+  /* overflow: hidden; */
+}
+
+/* ---------------- */
+.service-text.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+/* ----------------- */
+
+.service-text-description {
+  padding: 63px 24px 63px 24px;
+  margin: 0;
+
+  font-size: 18px;
+  line-height: 156%;
+  letter-spacing: 0.03em;
+
+  color: var(--white-color);
 }
 
 .service-main:nth-last-child(-n + 3) {
@@ -675,3 +761,68 @@ ul {
   line-height: 1.8;
   letter-spacing: 0.03em;
 }
+
+/* Модальное окно */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  z-index: 999;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* padding: 221px 536px 222px 536px; */
+
+  min-width: 528px;
+  min-height: 581px;
+
+  background-color: var(--white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.close-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 8px;
+  margin-right: 8px;
+  width: 30px;
+  height: 30px;
+
+  border-radius: 50%;
+  fill: #000000;
+  background: var(--white-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+/* @keyframes modal {
+  50% {
+    transform: scale(1.25);
+  }
+} */
+
+/* Время - 250ms, 
+функция распределения времени - cubic-bezier(0.4, 0, 0.2, 1)
+scale или translate, и opacity. */
