--- a/css/styles.css
+++ b/css/styles.css
@@ -666,17 +666,26 @@ ul {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+/* карточка на портфолио -->
+transform-translateX/Y (? / -100%)
+у нас заезжает снизу (целый див будет 
+заезжать)
+анимируем: transition: transform 250ms ...
+overflow-hidden на карточку
+absolut-position есть
+relative-относительно обертки картинки 
+delay-чтобы сделать сценарий
+кубик-для красоты
+scale-для масштабирования
+translate-откуда будет выезжать */
 
 .service-main {
-  /* bottom: 0; */
   margin-bottom: 30px;
   margin-right: 30px;
-  /* max-width: 370px; */
   max-width: calc((100%-60px) / 3);
 }
 
 .text-decoration {
-  position: relative;
   display: block;
   padding: 0;
   text-decoration: none;
@@ -688,35 +697,29 @@ ul {
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-/* ----------- */
-/* position: relative;
-   */
-/* ------------ */
-
-/* .text-decoration:hover .service-text-description {
-  transform: translateY(0);
-} */
+.service-img {
+  position: relative;
+  overflow: hidden;
+}
 
 .service-text {
   position: absolute;
 
+  /* width: 100%;
+  height: 294px; */
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 294px;
-
+  height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(100%);
+  transition: transform 255ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.service-text:hover,
-.service-text:focus {
-  /* overflow: hidden; */
+.text-decoration:hover .service-text {
+  transform: translateY(0);
 }
-
-/* ---------------- */
-.service-text.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-/* ----------------- */
 
 .service-text-description {
   padding: 63px 24px 63px 24px;
@@ -830,7 +833,3 @@ ul {
     transform: scale(1.25);
   }
 } */
-
-/* Время - 250ms, 
-функция распределения времени - cubic-bezier(0.4, 0, 0.2, 1)
-scale или translate, и opacity. */
