--- a/css/styles.css
+++ b/css/styles.css
@@ -181,13 +181,13 @@ ul {
   background-color: #2196f3;
   border-radius: 2px;
 
-  transform: scale(0.3, 0.5);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* transform: scale(0.3, 0.5);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
-.underline:hover::after {
+/* .underline:hover::after {
   transform: scale(1, 1);
-}
+} */
 
 .contacts .link {
   color: var(--primary-text-color);
@@ -693,8 +693,6 @@ ul {
 .service-text {
   position: absolute;
 
-  /* width: 100%;
-  height: 294px; */
   top: 0;
   left: 0;
   width: 100%;
