--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,8 @@ ul {
   line-height: 1.2;
   letter-spacing: 0.03em;
   text-decoration: none;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo:hover,
@@ -150,13 +152,15 @@ ul {
   padding-top: 32px;
   padding-bottom: 32px;
 
-  color: var(--main-text-color);
-  font-style: normal;
+    font-style: normal;
   text-decoration: none;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.02em;
+
+  color: var(--main-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* подчеркивание */
@@ -260,6 +264,9 @@ ul {
   font-weight: 700;
   letter-spacing: 0.06em;
   cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -435,6 +442,8 @@ ul {
   letter-spacing: 0.03em;
 }
 
+/* -------------------------- */
+
 .team-icons {
   margin: 0;
   padding: 0;
@@ -455,6 +464,8 @@ ul {
   justify-content: center;
   align-items: center;
   fill: var(--icon-color);
+
+  
 }
 
 .team-network-icons:hover,
@@ -462,6 +473,10 @@ ul {
   background-color: var(--accent-color);
   fill: var(--white-color);
   border-radius: 50%;
+}
+
+.icons {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-list {
@@ -494,6 +509,10 @@ ul {
   align-items: center;
   border-radius: 4px;
   border: 1px solid #afb1b8;
+
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link:hover,
@@ -506,6 +525,7 @@ ul {
 
 .customers-icon {
   fill: var(--icon-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ФУТЕР */
@@ -561,6 +581,8 @@ ul {
   display: block;
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-section-contact:not(:last-child) {
@@ -604,6 +626,8 @@ ul {
   background-color: rgba(255, 255, 255, 0.1);
   color: var(--white-color);
   border-radius: 50%;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .footer-icons-link:hover,
@@ -643,6 +667,12 @@ ul {
   letter-spacing: 0.03em;
   text-align: center;
   cursor: pointer;
+  
+  
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .button:hover,
@@ -677,6 +707,8 @@ ul {
   display: block;
   padding: 0;
   text-decoration: none;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .text-decoration:hover,
