--- a/css/styles.css
+++ b/css/styles.css
@@ -465,7 +465,7 @@ ul {
   align-items: center;
   fill: var(--icon-color);
 
-  
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-network-icons:hover,
