--- a/css/styles.css
+++ b/css/styles.css
@@ -465,7 +465,10 @@ ul {
   align-items: center;
   fill: var(--icon-color);
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 50%;
+ 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-network-icons:hover,
@@ -473,10 +476,6 @@ ul {
   background-color: var(--accent-color);
   fill: var(--white-color);
   border-radius: 50%;
-}
-
-.icons {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-list {
