--- a/css/styles.css
+++ b/css/styles.css
@@ -509,10 +509,9 @@ ul {
   border-radius: 4px;
   border: 1px solid #afb1b8;
 
-
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .customers-link:hover,
 .customers-link:focus {
